--- a/static/lib/custom.css
+++ b/static/lib/custom.css
@@ -11,3 +11,12 @@ body {
 .container > hr {
   margin: 60px 0;
 }
+
+.main-content {
+  margin: 60px 0;
+  text-align: center;
+}
+
+.row {
+  text-align: center;
+}
