fix filtra button

--- a/views/filtrar_edoc.haml
+++ b/views/filtrar_edoc.haml
@@ -21,4 +21,4 @@
       %a{:class => "btn btn-large btn-primary add-regra-edoc", :href => "javascript:void(null);"}
         %i{:class => "icon-plus-sign icon-white"}
         = "&nbsp;Adicionar Regra"
-      %input{:type => "submit", :class => "btn btn-large btn-success", :value => "Corrigir Arquivo"}
+      %input{:type => "submit", :class => "btn btn-large btn-success", :value => "Filtrar Arquivo"}
