--- a/views/filtrar_edoc.haml
+++ b/views/filtrar_edoc.haml
@@ -1,7 +1,7 @@
 .container
   %div
     %h1 Selecione o arquivo
-    %p.lead Selecione o arquivo E-DOC a ser corrigido (Envie arquivos compactados .zip)        
+    %p.lead Selecione o arquivo E-DOC a ser filtrado (Envie arquivos compactados .zip)        
     %form{:class => "form-inline", :method => "post", :action => "/filtrar-edoc", :enctype => 'multipart/form-data'}
       %input{:type => "file", :class => "input-small", :name => "edoc_arquivo"}
       %br
