--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,21 +1,11 @@
 !!!
 %html
   %head
-    %title Corrigir SEF 2 - ContaClaro
+    %title Corrigir SPED - ContaClaro
     %link{:rel => "stylesheet", :href => "/lib/bootstrap/css/bootstrap.min.css"}
     %link{:rel => "stylesheet", :href => "/lib/custom.css"}
   
   %body
-    .container
-      .navbar
-        .navbar-inner
-          %ul.nav
-            %li
-              %a{:href => "/"} Início
-            %li
-              %a{:href => "/corrigir-sef"} Corrgir SEF 2
-            %li
-              %a{:href => "/filtrar-edoc"} Filtrar registros E-DOC
     = yield    
   
   %script{:src => "/lib/jquery-1.7.2.min.js", :type => "text/javascript"}
